Take_Redis_p2
